examples/test/testpolicy11341.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11341
  namespace: namespace32
spec:
  podSelector:
    matchLabels:
      key38: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value14
          key12: value29
          key46: value45
      podSelector:
        matchLabels:
          key44: value45
          key4: value2
